<resources>
    <string name="app_name">HomeFeed - RSS Widget</string>
    <string name="app_label">HomeFeed</string>
    <string name="refresh">Refresh</string>
    <string name="description">Show description</string>
    <string name="images">Show images</string>
    <string name="rss_feed">Widget Header</string>
    <string name="header">Custom header</string>
    <string name="done">Done</string>
    <string name="rss_feed_url">RSS Feed URL</string>
    <string name="configure_rss_widget">Configure</string>
    <string name="trim_description">Trim description</string>
    <string name="trim_description_length">Trim description: %1$d characters</string>
    <string name="widget_transparency">Widget background opacity: %1$d</string>
    <string name="max_items_to_display">Max items to display: %1$d</string>
    <string name="relative">Relative</string>
    <string name="absolute">Absolute</string>
    <string name="date_format">Date format</string>
    <string name="show_article_source">Show article source</string>
    <string name="update_manual">Manual</string>
    <string name="update_15min">15 minutes</string>
    <string name="update_30min">30 minutes</string>
    <string name="update_1hr">1 hour</string>
    <string name="update_3hr">3 hours</string>
    <string name="update_6hr">6 hours</string>
    <string name="update_12hr">12 hours</string>
    <string name="update_interval">Update interval</string>
    <string name="open_links_with">Open links with</string>
    <string name="open_links_internal">Internal webview</string>
    <string name="open_links_reader">Reader view (if available)</string>
    <string name="open_links_external">External browser</string>
    <string name="loading">Loading...</string>
    <string name="dim_read_items">Dim read items</string>
    <string name="show_widget_title">Show Title Text</string>
    <string name="show_header_bar">Show Header Bar (Options)</string>
    <string name="widget_header_hint">Custom Title (Default: HomeFeed)</string>
    <string name="add_feed">Add Feed</string>
    <string name="active_feeds">Active Feeds</string>
    <string name="content_display">Content Display</string>
    <string name="theme">Theme</string>
    <string name="system">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
</resources>