<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configure_rss_widget"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:layout_marginBottom="16dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rss_feed_url"
                    android:layout_marginBottom="8dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_rss_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"/>
                </com.google.android.material.textfield.TextInputLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fillViewport="true"
                    android:scrollbars="none"
                    android:layout_marginBottom="4dp">
                    <LinearLayout
                        android:id="@+id/sample_buttons_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical" />
                </HorizontalScrollView>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rss_feed"
                    android:layout_marginTop="8dp"
                    android:visibility="gone">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_widget_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_trim_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trim_description"
                    android:visibility="gone"/>

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_trim_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="100"
                    android:valueFrom="100"
                    android:valueTo="5000"
                    android:stepSize="10"
                    app:labelBehavior="gone"
                    android:visibility="gone"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Show article source?"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date format"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"/>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/toggle_button_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">
                    <com.google.android.material.button.MaterialButton
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Relative"/>
                    <com.google.android.material.button.MaterialButton
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Absolute"/>

                </com.google.android.material.button.MaterialButtonToggleGroup>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_max_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Max items: 20"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"/>

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_max_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="20"
                    android:valueFrom="1"
                    android:valueTo="250"
                    android:stepSize="1"
                    app:labelBehavior="gone" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_transparency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/widget_transparency_100"
                    android:paddingTop="8dp"
                    android:paddingBottom="4dp"
                    />

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_transparency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="100"
                    android:valueFrom="0"
                    android:valueTo="100"
                    android:stepSize="1"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:layout_marginTop="24dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
